manifest-old/elasticsearch-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: elasticsearch
  namespace: elk
spec:
  serviceName: elasticsearch
  replicas: 1
  selector:
    matchLabels:
      app: elasticsearch
  template:
    metadata:
      labels:
        app: elasticsearch
    spec:
      containers:
        - name: elasticsearch
          image: docker.elastic.co/elasticsearch/elasticsearch:7.10.0
          ports:
            - containerPort: 9200
          resources:
            limits:
              memory: "2Gi"
              cpu: "1"
          volumeMounts:
            - name: elasticsearch-data
      #         mountPath: /usr/share/elasticsearch/data
      #       - name: backup-mount
      #         mountPath: /mount/backups
      # volumes:
      #   - name: backup-mount
      #     hostPath:
      #       path: /mount/backups    # Path on the host machine
      #       type: DirectoryOrCreate
  volumeClaimTemplates:
    - metadata:
        name: elasticsearch-data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 2Gi
